Урок 1. Дабавили разрешение для доступа в интернет. Настроили фрагмент и вьюмодель для него для получения картинки. Добавили в Utils функцию отображения "тоста" из кода урока. Фрагмент пока отображает только текст и картинку.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">MaterialYouFromEalipatov</string>
+    <string name="pictureofnasa">PictureOfNasa</string>
+    <string name="anymessage">AnyMessage</string>
 </resources>
