Урок 2. Вынесли в ресурсы весь "хардкод". Изменили условие проверки нажатия чипа HD на противоположное.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,28 @@
     <string name="expand_to_view">Разверните для просмотра</string>
     <string name="pull_up">Тяни вверх</string>
     <string name="hd">HD</string>
+    <string name="default_chip">Default</string>
+    <string name="entry">Entry</string>
+    <string name="choice">Choice</string>
+    <string name="action">Action</string>
+    <string name="filter">Filter</string>
+    <string name="background_color">Background Color</string>
+    <string name="ripple_color">Ripple Color</string>
+    <string name="chip_icon">Chip icon</string>
+    <string name="chip">Chip</string>
+    <string name="group">Group</string>
+    <string name="one">One</string>
+    <string name="two">Two</string>
+    <string name="choose_one">Choose One</string>
+    <string name="choice_a">Choice A</string>
+    <string name="choice_b">Choice B</string>
+    <string name="choice_c">Choice C</string>
+    <string name="in">in</string>
+    <string name="single">single</string>
+    <string name="line">line</string>
+    <string name="add">add</string>
+    <string name="horizontal">horizontal</string>
+    <string name="a">a</string>
+    <string name="scroll">scroll</string>
+    <string name="close_icon_listener">Close Icon Listener</string>
 </resources>
