Урок 2. Попытался реализовать автоматическую смену темы по низкому заряду батареи (сейчас только она не деприкейтед). Поигрался немного с дизайном.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -70,4 +70,5 @@
     <string name="check_mars_theme">Выбрана: марсианская тема</string>
     <string name="night_mode">Ночной режим:</string>
     <string name="apply">Применить</string>
+    <string name="auto_night_mode">Автоматический ночной режим</string>
 </resources>
