Урок 3. Навигация Настроили мени BottomBar для трех фрагментов (основного, настроек и вьюпейджера)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,6 +10,7 @@
     <string name="search_wiki">Найти в Википедии</string>
     <string name="wiki_helper_text">Поищите термин в википедии</string>
     <string name="settings">Настройки</string>
+    <string name="back">Назад</string>
     <string name="search">Поиск</string>
     <string name="today">Сегодня</string>
     <string name="yesterday">Вчера</string>
