Урок 4. Макеты Исправлено отображение на главной странице (зкрытие половины tab layout при большой странице)
Созданы фрагменты для разных макетов - навигация с помощью вьюпейджера

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -74,7 +74,7 @@
     <string name="mars_tab_text">Mars</string>
     <string name="solar_system_tab_text">Solar system</string>
 
-    <string name="makete">Constraint</string>
+    <string name="layouts">Макеты</string>
     <string name="constraint_layout">Constraint</string>
     <string name="coordinator_layout">Coordinator</string>
     <string name="motion_layout">Motion</string>
