--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -89,4 +89,5 @@
     <string name="btn_text">Text</string>
     <string name="btn_explode">Explode</string>
     <string name="btn_image">Image</string>
+    <string name="btn_move_trajectory">Move</string>
 </resources>
