--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -90,4 +90,6 @@
     <string name="btn_explode">Explode</string>
     <string name="btn_image">Image</string>
     <string name="btn_move_trajectory">Move</string>
+    <string name="mix">Mix</string>
+    <string name="shuffle">Shuffle</string>
 </resources>
