--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -92,4 +92,5 @@
     <string name="btn_move_trajectory">Move</string>
     <string name="mix">Mix</string>
     <string name="shuffle">Shuffle</string>
+    <string name="animator">Animator</string>
 </resources>
