Урок 5. Анимация Поработали с StateListAnimator вызов по кнопке "Левая"

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,4 +95,5 @@
     <string name="animator">Animator</string>
     <string name="option_1">Option 1</string>
     <string name="option_2">Option 2</string>
+    <string name="state_list_animator_example">StateListAnimator Example</string>
 </resources>
