--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -102,4 +102,10 @@
     <string name="date_animation_end">5 июня 2018 г.</string>
     <string name="tap_for_info">Показать описание</string>
     <string name="description_animation_end">На фото видно камни и песок в кратере Даниэлсона (диаметр кратера около 67 км), расположенного на юго-востоке области Arabia Terra.</string>
+    <string name="header_recycler">Заголовок</string>
+    <string name="mars">Марс</string>
+    <string name="mars_decript">Марс -- четвёртая по удалённости от Солнца и седьмая по размерам планета Солнечной системы. Названа в честь Марса -- древнеримского бога войны, соответствующего древнегреческому Аресу. Иногда Марс называют «красной планетой» из-за красноватого оттенка поверхности, придаваемого ей минералом маггемитом (оксидом железа).</string>
+    <string name="earth">Земля</string>
+    <string name="earth_descript">Дополнительный текст</string>
+    <string name="recycler_layout">Recycler</string>
 </resources>
